fix: links, logos & align error

--- a/components/footer/footer.module.scss
+++ b/components/footer/footer.module.scss
@@ -1,6 +1,6 @@
 .root {
   display: flex;
-  align-items: start;
+  align-items: flex-start;
   justify-content: center;
   gap: 70px;
   margin: 100px 0;
@@ -28,7 +28,7 @@
 
 .social {
   display: flex;
-  align-items: start;
+  align-items: flex-start;
   justify-content: center;
 }
 
@@ -38,7 +38,7 @@
 
 .copyright {
   display: flex;
-  align-items: start;
+  align-items: flex-start;
   justify-content: center;
   margin: 30px 0;
 }
